--- a/src/TechnicianUi/technician.css
+++ b/src/TechnicianUi/technician.css
@@ -16,7 +16,6 @@
     -fx-font-weight: bold;
     /*-fx-effect: dropshadow( gaussian , rgba(0,0,0,0.5) , 5,0,0,0 );*/
     -fx-cursor: hand;
-    -fx-alignment: center;
     -fx-font-weight: 400;
     -fx-text-alignment: center;
     -fx-font-family: 'Montserrat';
@@ -25,8 +24,8 @@
 
 .dashboardButton{
 	-fx-background-color:  #1c232b;
-	-fx-font-family: ' Arial Black';
-	-fx-font-size: 28px;
+	-fx-font-family: 'Arial Black';
+	-fx-font-size: 24px;
 	-fx-font-weight: bold;
 }
 
